# LLM4Quality-APP-back

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: docker-image.yml
llm4quality_api/: app.py  auth.py
llm4quality_api/config/: config.py
llm4quality_api/controllers/: verbatim_controller.py
llm4quality_api/datas/: fake_csv.csv  output_sample.json
llm4quality_api/db/: db.py
llm4quality_api/models/: models.py
llm4quality_api/routes/: routes.py
llm4quality_api/services/: verbatims.py
llm4quality_api/tasks/: verbatims.py
llm4quality_api/utils/: broker.py  logger.py  utils.py
tests/: verbatim_controller_test.py
