[tool.poetry]
name = "llm4quality-api"
version = "0.1.0"
description = "API for the LLM4Quality ERIOS project"
authors = ["romain-mezghenna <romain24.mezghenna01@gmail.com>","lilianmnreau <lilian.monnereau@gmail.com>"]
readme = "README.md"

# Include the project directory for packaging
packages = [
    { include = "llm4quality_api" }
]

[tool.poetry.dependencies]
python = "^3.13"
pymongo = "^4.10.1"
pika = "^1.3.2"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
