[tool.poetry]
name = "llm4quality-api"
version = "0.1.0"
description = "API for the LLM4Quality ERIOS project"
authors = ["romain-mezghenna <romain24.mezghenna01@gmail.com>","lilianmnreau <lilian.monnereau@gmail.com>"]
readme = "README.md"

# Include the project directory for packaging
packages = [
    { include = "llm4quality_api" }
]

[tool.poetry.dependencies]
python = "^3.13"

pandas = "^2.2.2"
openai = "^1.42.0"
python-dotenv = "^1.0.1"
jsonschema = "^4.23.0"

fastapi = "^0.115.6"
pymongo = "^4.10.1"
pika = "^1.3.2"
uvicorn = "^0.34.0"
websockets = "^14.1"
pydantic = "^2.10.3"
msal = "^1.31.1"
starlette = "^0.41.3"
fastapi-azure-auth = "^5.0.1"
pydantic-settings = "^2.6.1"

pytest = "^8.2.0"
pytest-asyncio = "^0.25.0"
mongomock = "^4.3.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
